--- a/trunk/Lines/res/values/strings.xml
+++ b/trunk/Lines/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, Lines!</string>
     <string name="app_name">AnNamLines</string>
+<string name="Line_Status"></string>
 </resources>
