--- a/wiki/LinkRef.wiki
+++ b/wiki/LinkRef.wiki
@@ -1,14 +1,2 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+SVN plugin for Eclipse
 http://subclipse.tigris.org/files/documents/906/45156/site-1.4.8.zip
